fixed background color for dark mode.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -205,7 +205,8 @@ header {
 
 body.dark {
   // transition : background 0.3s ease;
-  background-color: $neutral-800;
+  background : $dark-bg-gradient;
+
   header {
     .themeSwitchBtn {
       background-color: $neutral-700;
